<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#000000"
            android:id="@+id/Frambox">
            <TextView
                android:id="@+id/textView"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:textSize="35sp"
                android:background="#FFF"
                android:layout_gravity="center"/>
        </FrameLayout>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/one"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/Frambox"
            android:id="@+id/button1"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:text="@string/two"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/Frambox"
            android:layout_toRightOf="@+id/button1"
            android:id="@+id/button2"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@color/colorPrimary"
            android:text="@string/three"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/Frambox"
            android:layout_toRightOf="@+id/button2"
            android:id="@+id/button3"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonDivision"
            android:background="@color/colorPrimary"
            android:text="@string/delete"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/Frambox"
            android:layout_toRightOf="@+id/button3"
            android:id="@+id/buttonDelete"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button1"
            android:background="@color/colorPrimary"
            android:text="@string/four"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button4"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button2"
            android:background="@color/colorPrimary"
            android:text="@string/five"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/button4"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button5"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button3"
            android:layout_toRightOf="@id/button5"
            android:background="@color/colorPrimary"
            android:text="@string/six"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button6"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button4"
            android:background="@color/colorPrimary"
            android:text="@string/seven"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button7"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button5"
            android:layout_toRightOf="@+id/button7"
            android:background="@color/colorPrimary"
            android:text="@string/eight"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button8"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button6"
            android:layout_toRightOf="@+id/button8"
            android:background="@color/colorPrimary"
            android:text="@string/nine"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button9"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button7"
            android:background="@color/colorPrimary"
            android:text="@string/multiplications"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/buttonMultiplications"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button8"
            android:layout_toRightOf="@+id/buttonMultiplications"
            android:background="@color/colorPrimary"
            android:text="@string/zero"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/button0"/>
        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/button9"
            android:layout_toRightOf="@+id/button0"
            android:background="@color/colorPrimary"
            android:text="@string/division"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/buttonDivision"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_below="@id/Frambox"
            android:layout_toRightOf="@+id/buttonDelete"
            android:background="@color/colorPrimary"
            android:text="@string/sum"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/buttonSum"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonSum"
            android:layout_toRightOf="@+id/buttonDelete"
            android:background="@color/colorPrimary"
            android:text="@string/minus"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/buttonMinus"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonMinus"
            android:layout_toRightOf="@+id/buttonDelete"
            android:background="@color/colorPrimary"
            android:text="@string/equal"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            android:layout_alignBottom="@+id/buttonDelete"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/buttonEqual"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>